--- a/styles/sass/_item.scss
+++ b/styles/sass/_item.scss
@@ -21,6 +21,11 @@
   position: relative;
   z-index: 15;
   @include vendor-prefix(transform, scale(0.93));
+
+  @media screen and (max-width: 920px) {
+    @include vendor-prefix(transform, none);
+    opacity: 1;
+  }
 }
 
 section.details {
